@startuml


class Inicializador{
    + inicializarJuegoJson(json) Juego
    + obtenerDatosMapa(json, mapa)
    + inicializarEnemigos(json) Enemigos
}


class Mapa{
    Mapa(width,height)
    + setParcela(posicion, parcela)
}

class Juego{
    Juego(mapa, enemigos)
}

class Enemigos{
    Enemigos(oleadas)
}

class Oleada{
    + instanciarEn(camino)
}


Inicializador ..>"crea" Oleada
Enemigos--> "1..*"Oleada

Inicializador -->"crea" Mapa

Juego --> "recibe" Mapa
Juego --> Enemigos

Inicializador --> "instancia" Juego
@enduml